[gd_scene load_steps=10 format=3 uid="uid://bnjvsqtfmwvpl"]

[ext_resource type="Script" path="res://scripts/gun_turret.gd" id="1_1qg7l"]
[ext_resource type="Texture2D" uid="uid://c12ce042duw6h" path="res://assets/GunTurret_Base_SpriteSheet.png" id="2_4pnfl"]
[ext_resource type="Texture2D" uid="uid://4f4d8ynmnf7f" path="res://assets/GunTurret_Top_Sprite.png" id="3_cnygd"]
[ext_resource type="Texture2D" uid="uid://bgeiow1orplpt" path="res://assets/Selector_Sprite.png" id="4_ic0pg"]
[ext_resource type="Texture2D" uid="uid://cp1pgo53oktrx" path="res://assets/Damaged_Sprite.png" id="5_3hnrn"]
[ext_resource type="PackedScene" uid="uid://d0cfk3wpwt670" path="res://Components/health_component.tscn" id="6_r5y55"]
[ext_resource type="Script" path="res://Components/damage_component.gd" id="7_5occu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lgkaq"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5wb24"]
radius = 20.0

[node name="GunTurret" type="Node2D"]
script = ExtResource("1_1qg7l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4pnfl")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_lgkaq")

[node name="TopSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_cnygd")

[node name="SelectorSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ic0pg")

[node name="Line2D" type="Line2D" parent="."]
z_index = 1
width = 2.0
default_color = Color(0.610965, 0.226274, 0.0551097, 1)

[node name="DamagedSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_3hnrn")

[node name="HealthComponent" parent="." instance=ExtResource("6_r5y55")]
position = Vector2(0, -24)
Health = 4

[node name="DamageComponent" type="Area2D" parent="."]
script = ExtResource("7_5occu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageComponent"]
shape = SubResource("CircleShape2D_5wb24")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="Death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="Damaged" from="DamageComponent" to="." method="_on_damage_component_damaged"]
